crates/ars-components/src/layout/collapsible/snapshots/ars_components__layout__collapsible__tests__collapsible_content_closed.snap
---
source: crates/ars-components/src/layout/collapsible.rs
expression: "snapshot_attrs(&closed.connect(&|_| {}).content_attrs())"
---
aria-labelledby=collapsible-trigger
data-ars-part=content
data-ars-scope=collapsible
data-ars-state=closed
hidden=true
id=collapsible-content
role=region
