crates/ars-components/src/layout/collapsible/snapshots/ars_components__layout__collapsible__tests__collapsible_content_collapsed_size.snap
---
source: crates/ars-components/src/layout/collapsible.rs
expression: "snapshot_attrs(&collapsed_size.connect(&|_| {}).content_attrs())"
---
aria-labelledby=collapsible-trigger
data-ars-collapsed-size=true
data-ars-part=content
data-ars-scope=collapsible
data-ars-state=closed
id=collapsible-content
role=region
