crates/ars-components/src/layout/collapsible/snapshots/ars_components__layout__collapsible__tests__collapsible_content_open.snap
---
source: crates/ars-components/src/layout/collapsible.rs
expression: "snapshot_attrs(&open.connect(&|_| {}).content_attrs())"
---
aria-labelledby=collapsible-trigger
data-ars-part=content
data-ars-scope=collapsible
data-ars-state=open
id=collapsible-content
role=region
