crates/ars-components/src/layout/collapsible/snapshots/ars_components__layout__collapsible__tests__collapsible_indicator_open.snap
---
source: crates/ars-components/src/layout/collapsible.rs
expression: "snapshot_attrs(&open.connect(&|_| {}).indicator_attrs())"
---
aria-hidden=true
data-ars-part=indicator
data-ars-scope=collapsible
data-ars-state=open
