crates/ars-components/src/layout/collapsible/snapshots/ars_components__layout__collapsible__tests__collapsible_root_closed.snap
---
source: crates/ars-components/src/layout/collapsible.rs
expression: "snapshot_attrs(&closed.connect(&|_| {}).root_attrs())"
---
data-ars-part=root
data-ars-scope=collapsible
data-ars-state=closed
id=collapsible
